This is particularly useful for accessing production servers.  The easiest way
to use this feature is to establish a socks proxy using ssh, as follows:

    ssh -N -D 1080 any.server.running.sshd

Then simply set the HttpClientConfig SocksProxy property either directly in code
or via the following config option:

    myclient.http-client.socks-proxy = localhost:1080



Airlift 0.69

* In this release we have upgraded the following dependencies

  - jmxutils 1.13
  - Jackson 1.9.12


Airlift 0.68

* Support for v1 events has been removed

* HTTP client shutdown

The HttpClient and AsyncHttpClients now implement Closeable and properly
shutdown when used as lifecycle objects. Calling close shuts down the
connection pool for the underlying Apache HTTP client.

* Pretty-printed JSON

The injected JsonCodecFactory and injected codecs no longer produce
pretty-printed JSON. The previous behavior was a bug. JsonCodecFactory
has a method to return a factory that produces pretty-print codecs.


Airlift 0.67

* Cassandra module has been removed

Starting with this version, the Cassandra module is no longer supported

* DataSize and Duration can now be serialized as json

* In this release we have upgraded the following dependencies

  - Apache HttpClient 4.2.2


Airlift 0.66

* Java 7 is now required

Moving forward Airlift will be written using the new Java 7 syntax and APIs, and
releases will be compiled using Java 7.  This means Java 7 is required for
running Airlift-based servers.

* No thread pool for CounterStat

We changed the CounterStat implementation to use forward decay, which eliminates
the need for a thread pool (and having to manage a thread pool).

* HttpUriBuilder a fluent api for HTTP URIs

Building HTTP URIs using java.net.URI is difficult and error prone, so we added
a simple fluent API for building up HTTP URIs.  For example:

    URI uri = uriBuilder()
            .scheme("http")
            .host("www.example.com")
            .port(8081)