@@ -44,6 +44,16 @@ or via the following config option:
 
     myclient.http-client.socks-proxy = localhost:1080
 
+* BETA: Bootstrap for testing
+
+The Bootstrap class performs may initialization tasks for servers, but when
+testing not all installation tasks are desired.  Specifically, the Bootstrap
+class loads configuration properties from a file specified using System
+property.  The new setConfigurationProperty and setConfigurationProperties
+have been added to supply the properties directly.  Another, problematic
+task is logging initialization, which can now be disabled with the new
+doNotInitializeLogging() method.  For an example of Bootstrap a test see
+io.airlift.sample.TestServer.
 
 
 Airlift 0.69
